Upgrade to quarkus 3.25.0 and Java 21